<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/fundo_tela"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontespersonalizadas"
        android:gravity="center"
        android:text="@string/socialtec"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/txt_Email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:drawableLeft="@drawable/user_icon"
        android:fontFamily="@font/rowdies_bold"
        android:hint="@string/e_mail"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_Password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/password_secure_security_icon"
        android:fontFamily="@font/rowdies_bold"
        android:inputType="textPassword"
        android:hint="@string/senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Email"
        app:layout_constraintVertical_bias="0.073" />


    <TextView
        android:id="@+id/txt_recSenha"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="12dp"
        android:text="Esquici minha senha"
        android:fontFamily="@font/rowdies_bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Password" />

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/btn_azul"
        android:fontFamily="@font/rowdies_bold"
        android:text="@string/entrar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Password"
        app:layout_constraintVertical_bias="0.149" />

    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/criar_conta"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/rowdies_bold"
        android:text="@string/criar_conta"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>